Refactor CD change set delta function

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -1200,19 +1200,19 @@ Resources:
     Properties:
       CodeUri: lambdas/change-set-delta-notification/
       Description: >-
-        Sends a message about stack changes in a CodePipeline change set
+        Sends a message about stack changes in a CloudFormation change set
       Environment:
         Variables:
           SLACK_MESSAGE_RELAY_TOPIC_ARN:
             Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
           CD_STACK_NAME: !Ref AWS::StackName
-      Handler: lambda_function.lambda_handler
+      Handler: index.handler
       MemorySize: 128
       Policies:
         - !Ref CloudFormationReadOnlyAccessPolicy
         - !Ref CodePipelineJobResultWriteAccessPolicy
         - !Ref SlackRelaySnsPublishOnlyAccessPolicy
-      Runtime: python3.8
+      Runtime: nodejs14.x
       Tags:
         Project: Infrastructure
         "prx:cloudformation:stack-name": !Ref AWS::StackName
