Add ACM validation record

--- a/dns/passengerlist.org-hosted_zone.yml
+++ b/dns/passengerlist.org-hosted_zone.yml
@@ -53,6 +53,12 @@ Resources:
             - _0c68b076d347713f620ba75f400a67cf.duyqrilejt.acm-validations.aws.
           TTL: "3600"
           Type: CNAME
+        # athena.passengerlist.org
+        - Name: !Sub _a4cce766c2f722da35a2c204a575d68f.athena.${Domain}
+          ResourceRecords:
+            - _7d23a4d4f12e45958b618559a693d244.zzxlnyslwt.acm-validations.aws.
+          TTL: "3600"
+          Type: CNAME
   AwsAcmLegacyUsEast1:
     Type: AWS::Route53::RecordSetGroup
     Properties:
