Update task definition images

--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -200,7 +200,7 @@ Resources:
             - Name: REDIS_PORT
               Value: !GetAtt RedisReplicationGroup.PrimaryEndPoint.Port
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/castle.prx.org:${EcrImageTag}
+          Image: !Ref EcrImageTag
           LogConfiguration:
             LogDriver: awslogs
             Options:
