--- a/stacks/apps/feeder.yml
+++ b/stacks/apps/feeder.yml
@@ -545,7 +545,7 @@ Resources:
             - Name: AWS_ACCOUNT_ID
               Value: !Ref AWS::AccountId
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/feeder.prx.org:${EcrImageTag}
+          Image: !Ref EcrImageTag
           LogConfiguration:
             LogDriver: awslogs
             Options:
@@ -620,7 +620,7 @@ Resources:
             - Name: AWS_ACCOUNT_ID
               Value: !Ref AWS::AccountId
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/feeder.prx.org:${EcrImageTag}
+          Image: !Ref EcrImageTag
           LogConfiguration:
             LogDriver: awslogs
             Options:
