--- a/stacks/apps/metrics.yml
+++ b/stacks/apps/metrics.yml
@@ -195,7 +195,7 @@ Resources:
             - Name: CASTLE_HOST # TODO Remove from secrets
               Value: !Ref CastleHostname
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/metrics.prx.org:${EcrImageTag}
+          Image: !Ref EcrImageTag
           LogConfiguration:
             LogDriver: awslogs
             Options:
