--- a/stacks/apps/networks.yml
+++ b/stacks/apps/networks.yml
@@ -240,7 +240,7 @@ Resources:
             - Name: SPHINX_BASE_URL
               Value: !GetAtt Constants.SphinxBaseUrl
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/networks.prx.org:${EcrImageTag}
+          Image: !Ref EcrImageTag
           LogConfiguration:
             LogDriver: awslogs
             Options:
@@ -551,7 +551,7 @@ Resources:
             - Name: LOCAL_SPHINX
               Value: "true"
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/networks.prx.org:${EcrImageTag}
+          Image: !Ref EcrImageTag
           LogConfiguration:
             LogDriver: awslogs
             Options:
