--- a/stacks/container-apps/castle.prx.org.yml
+++ b/stacks/container-apps/castle.prx.org.yml
@@ -135,7 +135,7 @@ Resources:
             - Name: REDIS_PORT
               Value: !GetAtt CastleRedisReplicationGroup.PrimaryEndPoint.Port
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/castle.prx.org:${CastleEcrImageTag}
+          Image: !Ref CastleEcrImageTag
           LogConfiguration:
             LogDriver: awslogs
             Options:
