--- a/stacks/container-apps/dovetail.prx.org.yml
+++ b/stacks/container-apps/dovetail.prx.org.yml
@@ -438,7 +438,7 @@ Resources:
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/dovetail.prx.org:${DovetailEcrImageTag}
+          Image: !Ref DovetailEcrImageTag
           LogConfiguration:
             LogDriver: awslogs
             Options:
@@ -530,7 +530,7 @@ Resources:
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/dovetail-router.prx.org:${DovetailRouterEcrImageTag}
+          Image: !Ref DovetailRouterEcrImageTag
           LogConfiguration:
             LogDriver: awslogs
             Options:
