--- a/stacks/container-apps/feeder.prx.org.yml
+++ b/stacks/container-apps/feeder.prx.org.yml
@@ -377,7 +377,7 @@ Resources:
             - Name: AWS_ACCOUNT_ID
               Value: !Ref AWS::AccountId
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/${AppName}.prx.org:${EcrImageTag}
+          Image: !Ref EcrImageTag
           LogConfiguration:
             LogDriver: awslogs
             Options:
@@ -456,7 +456,7 @@ Resources:
             - Name: AWS_ACCOUNT_ID
               Value: !Ref AWS::AccountId
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/${AppName}.prx.org:${EcrImageTag}
+          Image: !Ref EcrImageTag
           LogConfiguration:
             LogDriver: awslogs
             Options:
