--- a/stacks/container-apps/metrics.prx.org.yml
+++ b/stacks/container-apps/metrics.prx.org.yml
@@ -115,8 +115,7 @@ Resources:
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
           Essential: true
-          # TODO
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/metrics.prx.org:${MetricsEcrImageTag}
+          Image: !Ref MetricsEcrImageTag
           LogConfiguration:
             LogDriver: awslogs
             Options:
