--- a/stacks/container-apps/publish.prx.org.yml
+++ b/stacks/container-apps/publish.prx.org.yml
@@ -130,7 +130,7 @@ Resources:
             - Name: UPLOAD_SIGNING_SERVICE_KEY_ID
               Value: !Ref UploadSigningAccessKeyId
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/publish.prx.org:${PublishEcrImageTag}
+          Image: !Ref PublishEcrImageTag
           LogConfiguration:
             LogDriver: awslogs
             Options:
