--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -232,7 +232,7 @@ Resources:
             - Name: ELASTICSEARCH_URL
               Value: !Sub https://${ElasticsearchDomain.DomainEndpoint}:9200
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/cms.prx.org:${EcrImageTag}
+          Image: !Ref EcrImageTag
           LogConfiguration:
             LogDriver: awslogs
             Options:
@@ -282,7 +282,7 @@ Resources:
             - Name: MEMCACHE_SERVERS
               Value: !Ref SharedMemcachedEndpointAddress
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/cms.prx.org:${EcrImageTag}
+          Image: !Ref EcrImageTag
           LogConfiguration:
             LogDriver: awslogs
             Options:
