--- a/stacks/apps/iframely.yml
+++ b/stacks/apps/iframely.yml
@@ -203,7 +203,7 @@ Resources:
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/iframely.prx.org:${EcrImageTag}
+          Image: !Ref EcrImageTag
           LogConfiguration:
             LogDriver: awslogs
             Options:
