--- a/stacks/apps/styleguide.yml
+++ b/stacks/apps/styleguide.yml
@@ -187,7 +187,7 @@ Resources:
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/styleguide.prx.org:${EcrImageTag}
+          Image: !Ref EcrImageTag
           LogConfiguration:
             LogDriver: awslogs
             Options:
