--- a/stacks/container-apps/grove.prx.org.yml
+++ b/stacks/container-apps/grove.prx.org.yml
@@ -205,7 +205,7 @@ Resources:
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/${AppName}.prx.org:${EcrImageTag}
+          Image: !Ref EcrImageTag
           LogConfiguration:
             LogDriver: awslogs
             Options:
@@ -292,7 +292,7 @@ Resources:
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/${AppName}.prx.org:${EcrImageTag}
+          Image: !Ref EcrImageTag
           LogConfiguration:
             LogDriver: awslogs
             Options:
