--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -241,7 +241,7 @@ Resources:
         prx:cloudformation:stack-name: !Ref AWS::StackName
         prx:cloudformation:stack-id: !Ref AWS::StackId
         prx:ops:environment: Production
-        prx:dev:application: Infrastructure
+        prx:dev:application: CI
   # GitHub Webhook Endpoint Handler
   # An HTTP endpoint is registered with GitHub to receive Pull Request and Push
   # events. A Lambda function handles requests made to that endpoint. If the
@@ -307,7 +307,7 @@ Resources:
         prx:cloudformation:stack-name: !Ref AWS::StackName
         prx:cloudformation:stack-id: !Ref AWS::StackId
         prx:ops:environment: Production
-        prx:dev:application: Infrastructure
+        prx:dev:application: CI
       Timeout: 3
   GitHubWebhookEndpointLambdaLogGroup:
     Type: AWS::Logs::LogGroup
@@ -428,7 +428,7 @@ Resources:
         prx:cloudformation:stack-name: !Ref AWS::StackName
         prx:cloudformation:stack-id: !Ref AWS::StackId
         prx:ops:environment: Production
-        prx:dev:application: Infrastructure
+        prx:dev:application: CI
       Timeout: 30
   GitHubEventHandlerLambdaLogGroup:
     Type: AWS::Logs::LogGroup
@@ -561,7 +561,7 @@ Resources:
         prx:cloudformation:stack-name: !Ref AWS::StackName
         prx:cloudformation:stack-id: !Ref AWS::StackId
         prx:ops:environment: Production
-        prx:dev:application: Infrastructure
+        prx:dev:application: CI
       Timeout: 3
   CodeBuildCallbackHandlerLambdaLogGroup:
     Type: AWS::Logs::LogGroup
@@ -658,7 +658,7 @@ Resources:
         prx:cloudformation:stack-name: !Ref AWS::StackName
         prx:cloudformation:stack-id: !Ref AWS::StackId
         prx:ops:environment: Production
-        prx:dev:application: Infrastructure
+        prx:dev:application: CI
       Timeout: 10
   CiStatusNotificationHandlerLambdaLogGroup:
     Type: AWS::Logs::LogGroup
