--- a/ci/template.yml
+++ b/ci/template.yml
@@ -1,4 +1,4 @@
-# ci/ci.yml
+# ci/template.yml
 # This stack should generally only be launched once globally
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
