Add The Stoop DNS

--- a/dns/publicfeeds.net-hosted_zone.yml
+++ b/dns/publicfeeds.net-hosted_zone.yml
@@ -152,3 +152,7 @@ Resources:
         - { Type: AAAA, Name: !Sub "pf2526lins.${Domain}", AliasTarget: { DNSName: "d3akokrgns9p2a.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: A, Name: !Sub "pf9084pist.${Domain}", AliasTarget: { DNSName: "d382rs9ora7usw.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
         - { Type: AAAA, Name: !Sub "pf9084pist.${Domain}", AliasTarget: { DNSName: "d382rs9ora7usw.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+
+        # The Stoop
+        - { Type: A, Name: !Sub "pf0323tstp.${Domain}", AliasTarget: { DNSName: "d3s1uijt47bfkv.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
+        - { Type: AAAA, Name: !Sub "pf0323tstp.${Domain}", AliasTarget: { DNSName: "d3s1uijt47bfkv.cloudfront.net.", HostedZoneId: Z2FDTNDATAQYW2 } }
