Fix serverless SNS policies

--- a/ci/template.yml
+++ b/ci/template.yml
@@ -527,9 +527,12 @@ Resources:
       Handler: index.handler
       MemorySize: 128
       Policies:
-        - SNSPublishMessagePolicy:
-            TopicName:
-              Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
+        - Statement:
+            - Action: sns:Publish
+              Effect: Allow
+              Resource:
+                Fn::ImportValue: !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
+          Version: "2012-10-17"
       Runtime: nodejs14.x
       Tags:
         prx:meta:tagging-version: "2021-04-07"
