--- a/etc/ad-ops-show-activity.yml
+++ b/etc/ad-ops-show-activity.yml
@@ -92,8 +92,11 @@ Resources:
       Handler: index.handler
       MemorySize: 128
       Policies:
-        - SNSPublishMessagePolicy:
-            TopicName: !Ref SlackMessageRelayTopicArn
+        - Statement:
+            - Action: sns:Publish
+              Effect: Allow
+              Resource: !Ref SlackMessageRelayTopicArn
+          Version: "2012-10-17"
       Runtime: nodejs12.x
       # Tags:
       #   Project: Porter
