--- a/etc/root-account-activity-monitor.yml
+++ b/etc/root-account-activity-monitor.yml
@@ -174,8 +174,11 @@ Resources:
       MemorySize: 128
       Policies:
         - AWSLambdaBasicExecutionRole
-        - SNSPublishMessagePolicy:
-            TopicName: !Ref SlackMessageRelayTopicArn
+        - Statement:
+            - Action: sns:Publish
+              Effect: Allow
+              Resource: !Ref SlackMessageRelayTopicArn
+          Version: "2012-10-17"
       Runtime: nodejs12.x
       Tags:
         Project: Admin
