--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -443,9 +443,12 @@ Resources:
         };
       MemorySize: 128
       Policies:
-        - SNSPublishMessagePolicy:
-            TopicName:
-              Fn::ImportValue: !Sub ${NotificationsStackName}-SlackMessageRelaySnsTopicArn
+        - Statement:
+            - Action: sns:Publish
+              Effect: Allow
+              Resource:
+                Fn::ImportValue: !Sub ${NotificationsStackName}-SlackMessageRelaySnsTopicArn
+          Version: "2012-10-17"
       Runtime: nodejs12.x
       Tags:
         prx:meta:tagging-version: "2021-04-07"
